--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="UPSC Resolve by Prankul Agarwal | IAS Preparation Guidance" />
     <meta property="og:description" content="Get expert UPSC preparation guidance from Prankul Agarwal, who has appeared in 4 UPSC Mains & 3 UPPSC Mains. Practical tips, study plans, and answer-writing strategies!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
